# molecular_simulation

./: README.md  global.cpp  global.h  hw3main  main  main.cpp
hw1/: geo.out  makefile  readin  readin.cpp
hw10/: README  diffusion.txt  force.txt  input  plot.py  position.txt  velocity.txt
hw11/: CMakeLists.txt  README  force.txt  input  plot.py  position.txt  rdf.txt  velocity.txt
hw2/: BN_1024atoms.xyz  BN_long.xyz  BN_trans.xyz  diamond.xyz  readin  readin.cpp
hw3/: distance.cpp  distance.h  geo.xyz  geo12.out  geo12.xyz  geo16.out  initialize.cpp  initialize.h  input  main  main.cpp  neighbor  neighbor.cpp  neighbor.h  parameters.cpp  parameters.h  pos_distance.cpp  pos_distance.h  readin  readin.cpp
hw4/: energy.txt  force.txt  force_energy  force_energy.cpp  geo.in  hello  hello.cpp  initialize.cpp  main  main.cpp  neighbor.cpp  parameters.cpp  parameters.h  pos_distance.cpp  pos_distance.h
hw5/: README  energy.txt  force.txt  force_energy.h  initialize.cpp  input  kin_energy.cpp  main  main.cpp  mdrun  mdrun.cpp  mdrun.h  neighbor  neighbor.cpp  parameters.cpp  parameters.h  pos_distance.cpp  pos_distance.h  position.txt  read_in.cpp  velocity.txt
hw6/: CMakeLists.txt  README.md  geo12.out  geo16.out  geo2.in  geo3.in  initialize.cpp  input  main.cpp  neighbor  neighbor.cpp  (+2 more)
hw7/: CMakeLists.txt  README  force.txt  input  position.txt  velocity.txt
hw7/source/: initialize  initialize.cpp  main  main.cpp  makefile  mdrun  mdrun.cpp  mdrun.h  neighbor  neighbor.cpp  parameters.cpp  parameters.h  pos_distance  read_in.cpp  read_in.h
hw8/: README  (+3 more)
(+74 files in other folders)
